2009-02-15  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (rmail-insert-rmail-file-header)
	(rmail-count-new-messages, rmail-show-message): Remove unnecessary
	autoloads.
	(rmail-default-rmail-file): Remove unnecessary declaration.
	(gnus-output-to-rmail): Handle mbox Rmail as well as Babyl Rmail.

2009-02-14  Glenn Morris  <rgm@gnu.org>

	* gnus.el (rmail-default-rmail-file): Remove declaration of deleted
	variable (only used in gnus-util, which declares it anyway).
	(rmail-output-to-rmail-file): Remove autoload of deleted function,
	which was only needed by gnus-art (changed to not use it any more).
	(rmail-insert-rmail-file-header): Remove autoload of deleted function,
	only used in gnus-util, which autoloads it itself.
	(rmail-update-summary): Fix autoload.

	* gnus-art.el (gnus-summary-save-in-mail): Use gnus-output-to-rmail
	rather than rmail-output-to-rmail-file.

2009-02-07  Glenn Morris  <rgm@gnu.org>

	* message.el (rmail-msg-restore-non-pruned-header): Remove unneeded
	autoload of function that no longer exists.
	(rmail-toggle-header): Declare.
	(message-forward-rmail-make-body): Handle mbox Rmail.

2009-01-31  Glenn Morris  <rgm@gnu.org>

	* gnus-sum.el (gnus-summary-next-article): XEmacs-friendly version of
	2009-01-09 change.

2009-01-26  Teodor Zlatanov  <tzlatanov@jumptrading.com>

	* auth-source.el (auth-source-forget-user-or-password): Clarify docs.
	(auth-source-forget-all-cached): New convenience function.
	(auth-source-user-or-password): Accept list of modes or a single mode.

	* mail-source.el (mail-source-bind, mail-source-set-1): Use list of
	auth-source modes.

	* nnimap.el (nnimap-open-connection): Use list of
	auth-source modes.

	* nntp.el (nntp-send-authinfo): Use list of
	auth-source modes.

2009-01-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Update docs to reflect epa-file-enable is to be used
	now.

2009-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-pathname-coding-system): Default to the `file-name'